Fix odd overlaps on main buttons.
Originally I was using padding for the buttons because they were table
elements but now they are just floating divs.

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 div.roundimg {
   height: 129px;
   width: 129px;
-  padding: 20px;
-  margin: 0px;
+  margin: 20px;
   background-position: center;
   background-repeat: no-repeat;
 }
